--- a/package.json
+++ b/package.json
@@ -5,16 +5,24 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev --transpileOnly --ignore-watch node_modules src/server.ts "
+    "dev:server": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts ",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
+    "bcrypt": "^5.0.0",
+    "celebrate": "^12.1.2",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "2.21.2",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "pg": "^8.3.0",
+    "typeorm": "^0.2.25",
+    "uuidv4": "^6.2.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.7",
     "eslint": "6.8.0",
     "eslint-config-prettier": "^6.11.0",
