--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "eslint-plugin-import": "2.21.2",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "pg": "^8.3.0",
     "typeorm": "^0.2.25",
     "uuidv4": "^6.2.0"
@@ -24,6 +26,8 @@
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.7",
+    "@types/jsonwebtoken": "^8.5.0",
+    "@types/multer": "^1.4.3",
     "eslint": "6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^2.0.0",
