--- a/ormconfig.json
+++ b/ormconfig.json
@@ -6,9 +6,9 @@
   "username": "postgres",
   "password": "123456",
   "database": "Platform",
-  "entities": ["./src/models/*.ts"],
-  "migrations": ["./src/database/migrations/*.ts"],
+  "entities": ["./src/modules/**/infra/typeorm/entities/*.ts"],
+  "migrations": ["./src/shared/infra/typeorm/migrations/*.ts"],
   "cli": {
-    "migrationsDir": ["./src/database/migrations"]
+    "migrationsDir": ["./src/shared/infra/typeorm/migrations"]
   }
 }
