--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@typescript-eslint/parser": "^3.6.1",
     "bcrypt": "^5.0.0",
     "celebrate": "^12.1.2",
+    "class-transformer": "^0.2.3",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "2.21.2",
     "express": "^4.17.1",
@@ -21,6 +22,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "pg": "^8.3.0",
+    "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
     "typeorm": "^0.2.25",
     "uuidv4": "^6.2.0"
