--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "eslint-plugin-import": "2.21.2",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.4.10",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
@@ -32,6 +34,7 @@
     "@types/express": "^4.17.7",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.3",
+    "@types/nodemailer": "^6.4.0",
     "eslint": "6.8.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^2.0.0",
