--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "bcrypt": "^5.0.0",
     "celebrate": "^12.1.2",
     "class-transformer": "^0.2.3",
+    "date-fns": "^2.15.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "2.21.2",
     "express": "^4.17.1",
@@ -22,7 +23,7 @@
     "handlebars": "^4.7.6",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
-    "nodemailer": "^6.4.10",
+    "nodemailer": "6.4.6",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
     "tsyringe": "^4.3.0",
