--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "handlebars": "^4.7.6",
     "ioredis": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.0",
     "multer": "^1.4.2",
     "nodemailer": "6.4.6",
     "pg": "^8.3.0",
