--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
     "bcrypt": "^5.0.0",
-    "bee-queue": "^1.2.3",
+    "bull": "^3.16.0",
     "celebrate": "^12.1.2",
     "class-transformer": "^0.2.3",
     "date-fns": "^2.15.0",
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
+    "@types/bull": "^3.14.0",
     "@types/express": "^4.17.7",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/multer": "^1.4.3",
