Adicionando dotenv a aplicação

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "celebrate": "^12.1.2",
     "class-transformer": "^0.2.3",
     "date-fns": "^2.15.0",
+    "dotenv": "^8.2.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "2.21.2",
     "express": "^4.17.1",
