--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "bull": "^3.16.0",
     "celebrate": "^12.1.2",
     "class-transformer": "^0.2.3",
+    "cors": "^2.8.5",
     "date-fns": "^2.15.0",
     "dotenv": "^8.2.0",
     "eslint-config-airbnb-base": "^14.2.0",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/bull": "^3.14.0",
+    "@types/cors": "^2.8.7",
     "@types/express": "^4.17.7",
     "@types/jest": "^26.0.9",
     "@types/jsonwebtoken": "^8.5.0",
