--- a/web/.eslintrc.json
+++ b/web/.eslintrc.json
@@ -18,6 +18,7 @@
   },
   "plugins": ["react", "@typescript-eslint", "react-hooks"],
   "rules": {
+    "camelcase": "off",
     "no-confusing-arrow": "off",
     "react/jsx-one-expression-per-line": "off",
     "@typescript-eslint/camelcase": "off",
