Atualizando vairáveis de ambiente

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,4 +1,4 @@
-APP_SECRET = dd97500452b1baf993da3d64981fa45b
+APP_SECRET = "Your App Secret"
 
 APP_API_URL =http://localhost:3333
 APP_WEB_URL =http://localhost:3000
