--- a/mobile/package.json
+++ b/mobile/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
+    "axios": "^0.20.0",
     "polished": "^3.6.6",
     "react": "16.13.1",
     "react-native": "0.63.2",
@@ -21,6 +22,8 @@
     "react-native-safe-area-context": "^3.1.7",
     "react-native-screens": "^2.10.1",
     "react-native-vector-icons": "^7.0.0",
+    "react-native-video": "^5.1.0-alpha8",
+    "react-native-video-player": "^0.10.1",
     "styled-components": "^5.1.1"
   },
   "devDependencies": {
@@ -30,6 +33,8 @@
     "@types/jest": "^25.2.3",
     "@types/react-native": "^0.63.2",
     "@types/react-native-vector-icons": "^6.4.5",
+    "@types/react-native-video": "^5.0.1",
+    "@types/react-native-video-player": "^0.10.1",
     "@types/react-test-renderer": "^16.9.2",
     "@types/styled-components": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
