--- a/mobile/ios/Podfile
+++ b/mobile/ios/Podfile
@@ -10,6 +10,8 @@ target 'mobile' do
 
   pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
 
+  pod 'react-native-video', :path => '../node_modules/react-native-video'
+
   target 'mobileTests' do
     inherit! :complete
     # Pods for testing
