Integrando o aplicativo com a API

--- a/mobile/.eslintrc.json
+++ b/mobile/.eslintrc.json
@@ -30,7 +30,9 @@
       "prettier"
   ],
   "rules": {
+    "react/jsx-one-expression-per-line": "off",
     "prettier/prettier": "error",
+    "camelcase": "off",
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
