--- a/mobile/android/app/build.gradle
+++ b/mobile/android/app/build.gradle
@@ -225,7 +225,7 @@ apply from: file("../../node_modules/@react-native-community/cli-platform-androi
 
 
 project.ext.vectoricons = [
-    iconFontNames: [ 'MaterialIcons.ttf']
+    iconFontNames: [ 'MaterialIcons.ttf', "FontAwesome.ttf"]
 ]
 
 
